--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "~13.2.0",
     "core-js": ">=2.4.1",
     "exifr": "^7.1.3",
-    "ng2-img-max": "^2.1.15",
+    "ng2-img-max": "2.2.5",
     "pica": "^9.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
